Bug 1196539 - Apply plugin config using AutoResolveRefLayers during composition. r=matt.woodrow