gfx/layers/composite/AsyncCompositionManager.h
@@ -117,6 +117,10 @@ public:
   // True if the underlying layer tree is ready to be composited.
   bool ReadyForCompose() { return mReadyForCompose; }
 
+  // Indicates if during the last composition remote content was detected.
+  // Updated in CompositorParent's CompositeToTarget.
+  bool HasRemoteContent() { return mHasRemoteContent; }
+
   // Returns true if the next composition will be the first for a
   // particular document.
   bool IsFirstPaint() { return mIsFirstPaint; }
@@ -186,7 +190,8 @@ private:
    * For reach RefLayer in our layer tree, look up its referent and connect it
    * to the layer tree, if found.
    */
-  void ResolveRefLayers();
+  void ResolveRefLayers(bool aResolvePlugins);
+
   /**
    * Detaches all referents resolved by ResolveRefLayers.
    * Assumes that mLayerManager->GetRoot() and mTargetConfig have not changed
@@ -215,6 +220,7 @@ private:
   int32_t mPaintSyncId;
 
   bool mReadyForCompose;
+  bool mHasRemoteContent;
 
   gfx::Matrix mWorldTransform;
   LayerTransformRecorder mLayerTransformRecorder;
@@ -224,10 +230,12 @@ MOZ_MAKE_ENUM_CLASS_BITWISE_OPERATORS(AsyncCompositionManager::TransformsToSkip)
 
 class MOZ_STACK_CLASS AutoResolveRefLayers {
 public:
-  explicit AutoResolveRefLayers(AsyncCompositionManager* aManager) : mManager(aManager)
+  explicit AutoResolveRefLayers(AsyncCompositionManager* aManager,
+                                bool aResolvePlugins = false) :
+    mManager(aManager)
   {
     if (mManager) {
-      mManager->ResolveRefLayers();
+      mManager->ResolveRefLayers(aResolvePlugins);
     }
   }
 
